--- a/jenkins.properties
+++ b/jenkins.properties
@@ -1,4 +1,4 @@
 JENKINS_URL=http://localhost:8080/
 JENKINS_JOB_NAME=publish-artifact
-JENKINS_JOB_NUMBER=10
+JENKINS_JOB_NUMBER=$PUBLISH_JOB_NUM
 JENKINS_ARTIFACT=artifact.txt
