#publih job num checkin by jenkins

--- a/jenkins.properties
+++ b/jenkins.properties
@@ -1,5 +1,4 @@
 JENKINS_URL=http://localhost:8080/
 JENKINS_JOB_NAME=publish-artifact
-JENKINS_JOB_NUMBER=$PUBLISH_JOB_NUM
-JENKINS_ARTIFACT=artifact.txt
-ARTIFACT_URL=http://localhost:8089/artifactory/simple/sample/com/efsavage/hello-world-war/1.0.0/
+JENKINS_JOB_NUMBER=4
+ARTIFACT_URL=http://localhost:8089/artifactory/sample/com/efsavage/hello-world-war/1.0.0/
